--- a/GuessingGame/src/com/sepirothx/game/MainFrame.form
+++ b/GuessingGame/src/com/sepirothx/game/MainFrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.sepirothx.game.MainFrame">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="725" height="541"/>
@@ -25,14 +25,6 @@
           <text value="GUESSING GAME"/>
         </properties>
       </component>
-      <component id="279de" class="javax.swing.JButton" binding="btnGuess">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Guess"/>
-        </properties>
-      </component>
       <component id="67ab2" class="javax.swing.JLabel" binding="labelInputIndicator">
         <constraints>
           <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -53,10 +45,26 @@
       </component>
       <component id="91cd4" class="javax.swing.JLabel" binding="labelMessageBox">
         <constraints>
-          <grid row="2" column="2" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Try your luck! Guess the number!"/>
+          <text value="TRY YOUR LUCK!"/>
+        </properties>
+      </component>
+      <component id="279de" class="javax.swing.JButton" binding="btnGuess">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Guess"/>
+        </properties>
+      </component>
+      <component id="f9092" class="javax.swing.JButton" binding="btnRestart">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Restart"/>
         </properties>
       </component>
     </children>
