--- a/GuessingGame/src/com/sepirothx/game/MainFrame.form
+++ b/GuessingGame/src/com/sepirothx/game/MainFrame.form
@@ -8,14 +8,6 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="238cb" class="javax.swing.JTextField" binding="tfGuess">
-        <constraints>
-          <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="5b2be" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -25,18 +17,9 @@
           <text value="GUESSING GAME"/>
         </properties>
       </component>
-      <component id="67ab2" class="javax.swing.JLabel" binding="labelInputIndicator">
-        <constraints>
-          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="Comic Sans MS"/>
-          <text value="Enter your guess"/>
-        </properties>
-      </component>
       <component id="86599" class="javax.swing.JLabel" binding="labelAnswer">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Comic Sans MS" size="20" style="1"/>
@@ -45,7 +28,7 @@
       </component>
       <component id="91cd4" class="javax.swing.JLabel" binding="labelMessageBox">
         <constraints>
-          <grid row="2" column="2" row-span="5" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="2" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="TRY YOUR LUCK!"/>
@@ -65,6 +48,47 @@
         </constraints>
         <properties>
           <text value="Restart"/>
+        </properties>
+      </component>
+      <component id="4cd74" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Correct Answer:"/>
+        </properties>
+      </component>
+      <component id="67ab2" class="javax.swing.JLabel" binding="labelInputIndicator">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Comic Sans MS"/>
+          <text value="Enter your guess"/>
+        </properties>
+      </component>
+      <component id="238cb" class="javax.swing.JTextField" binding="tfGuess">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="625bd" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Guess the number from 0  to 10"/>
+        </properties>
+      </component>
+      <component id="1c0a2" class="javax.swing.JLabel" binding="labelAttempts">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=""/>
         </properties>
       </component>
     </children>
