--- a/GuessingGame/src/com/sepirothx/game/MainFrame.form
+++ b/GuessingGame/src/com/sepirothx/game/MainFrame.form
@@ -42,12 +42,12 @@
           <text value="Guess"/>
         </properties>
       </component>
-      <component id="f9092" class="javax.swing.JButton" binding="btnRestart">
+      <component id="f9092" class="javax.swing.JButton" binding="btnExit">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Restart"/>
+          <text value="Exit"/>
         </properties>
       </component>
       <component id="4cd74" class="javax.swing.JLabel">
