--- a/Calculator/src/com/sepirothx/calculator/Calculator.form
+++ b/Calculator/src/com/sepirothx/calculator/Calculator.form
@@ -8,9 +8,9 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="1c233" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="1c233" class="javax.swing.JTextField" binding="tfResult">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -133,14 +133,14 @@
           <text value="="/>
         </properties>
       </component>
-      <hspacer id="594ae">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <hspacer id="e2313">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="eb1d0">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
     </children>
